@@ -13,6 +13,7 @@ v1.9.9
 ! imdb_person::filmograf did not catch characters if they had no link. Due
   to changes on the IMDB sites, it in fact did no longer catch any character...
 + pilot movie class now correctly assigns the persons IMDBID
+! imdb_person: born() and died() missed to return the year due to IMDB site changes
 
 v1.9.8 (02.12.2009)
 -------------------
